test/errors/leak_on_error2.sl
# expect: COMPERROR
() -> none {};

1 + "false";

